deploy/argocd/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argocd-route
  namespace: argocd
spec:
  hostnames:
    - test2.studiobasa.com
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
      namespace: default
      sectionName: http
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: gateway
      namespace: default
      sectionName: https
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: argocd-proxy
          port: 80
      matches:
        - path:
            type: PathPrefix
            value: /argocd
